--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vueuse/sound": "^1.1.7",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14",
+    "loader": "^2.1.1",
+    "swiper": "^8.3.2",
+    "vue": "^2.7.8",
+    "vue-carousel-3d": "^1.0.1",
     "vue-router": "^3.5.1",
+    "vue-scrollactive": "^0.9.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -19,6 +24,6 @@
     "@vue/cli-service": "~5.0.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.7.8"
   }
 }
