--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.7.8",
     "vue-carousel-3d": "^1.0.1",
     "vue-router": "^3.5.1",
+    "vue-scroll-fixed-navbar": "^0.2.2",
     "vue-scrollactive": "^0.9.3",
     "vuex": "^3.6.2"
   },
